projWebsite/style.css
/* ... */
/********* Recently Added Padding ***********/

.contactInfo h3 {
    padding-bottom: 0.5vw;
}

.contactInfo p {
    color: #999;
}

.contactInfoBx {
    position: relative;
}

.contactInfoBx .box {
    position: relative;
    padding: 20px;
    display: flex;
}

.contactInfoBx .box .icon {
    color: #fff;
    min-width: 40px;
    padding-top: 4px;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    font-size: 24px;
}

.contactInfoBx .box .text {
    color: #999;
    margin-left: 20px;
    font-size: 16px;
    flex-direction: column;
    font-weight: 300;
}

.contactInfoBx .box .text h3 {
    color: #d20a84;
    font-weight: 500;
    margin: 0;
}


/* Extra Code Not Need for now
.contactInfoBx .box .text p, address {
    font-style: normal;
    font-weight: 300;
    color: #999;
}*/

/******** Recently Added Padding *********/
.contactInfoBx .boxSocial {
    display: flex;
    flex-direction: row;
    padding-left: 55px;
    letter-spacing: 45px;
    padding-top: 5px;
}

.contactInfoBx .boxSocial .fa-brands {
    font-size: 42px;
    color:#55127f;
    cursor: pointer;
}


.contactInfoBx .boxSocial .fa-brands {
    transition: 0.5s;
}

.contactInfoBx .boxSocial .fa-brands:hover {
    transform: scale(0.5) translateY(-15px);
}


/* Designing Footer Layout in CSS */

footer.copyright {
    background: #000;
    color: #fff;
    text-align: center;
    padding-right: 10px;
}

.copyright a {
   color: #d20a84
}

/* Making a Responsive Layout */

@media (max-width: 991px) 
{
    header,
    header.sticky {
        padding:20px 50px;
    }
    header .menu {
        display:none;
    }
    header .menu {
        position: fixed;
        background: #fff;
        display:block;
        top: 69px;
        left: -100%;
        padding: 100px 50px;
        width: 100%;
        height: 100vh;
        text-align: center;
        border-top: 1px solid rgba(0, 0, 0, 0.2);
        transition: 0.5s;
        -webkit-transition: 0.5s;
        -moz-transition: 0.5s;
        -ms-transition: 0.5s;
        -o-transition: 0.5s;
    }

    header .menu.active {
        position: fixed;
        background: #fff;
        display:block;
        top: 69px;
        left: 0;
        padding: 100px 50px;
        width: 100%;
        height: 100vh;
        text-align: center;
    }

    header ul li a {
        font-size:20px;
        color: #111;
        font-weight: 400;
        margin: 10px 0;
    }
    .toggle {
        width: 40px;
        height: 40px;
        background-image: url(images/menu.png);
        background-position: center;
        background-repeat: no-repeat;
        background-size: 30px;
        cursor: pointer;
    }
    .toggle.active {
        width: 40px;
        height: 40px;
        background-image: url(images/close.png);
        background-position: center;
        background-size: 25px;
        background-repeat: no-repeat;
        cursor: pointer;
    }
    /*header.sticky .toggle {
        filter: invert(1);
        -webkit-filter: invert(1);
    }*/

    /*section {
        padding: 100px 30px;
    }*/

    .banner {
        padding: 150px 50px 100px;
    }

    .banner h2 {
        font-size: 1.5em;
    }
    .banner h3 {
        font-size: 1em;
    }
    .textBx {
        position: relative;
        top: 170px;
    }
    .btn {
        margin-top: 10px;
        padding: 10px 20px;
        font-size: 16px;
        border-radius: 50px;
        -webkit-border-raius: 50px;
        -moz-border-radius: 50px;
        -ms-border-radius: 50px;
        -o-border-radius: 50px;
    }

    .content {
        flex-direction: column;
    }
    .contentBx {
        padding:0;
    }
    
    .content .w50 img {
        display:block;
        margin: 0 auto 30px auto;
    }
    
    .contentBx h2 {
        font-size: 20px;
        font-weight: 300;
    }
    .contentBx h3 {
        font-size: 20px;
    }
    .heading h2 {
        font-size: 24px;
    }
    .contactInfo{
        margin:10px 0;
    }
}


.textBx h2 {
    animation-duration: 5s;
    animation-name: myframes;
    animation-iteration-count: 1;
    animation-timing-function: ease-in-out;
}


@keyframes myframes {
    0% {
        margin-left: -400px;
    }
    50% {
        margin-left: 0px;
    }
    100% {
        margin-left: 0px;
    }
}


.textBx h3 {
    animation-duration: 5s;
    animation-name: slidein;
    animation-iteration-count: 1;
    animation-timing-function: ease-in-out;
}

@keyframes slidein {
    0% {
        margin-left: 400px;
    }
    50% {
        margin-left: 0px;
    }
    100% {
        margin-left: 0px;
    }
}

/*.btn {
    animation-duration: 5s;
    animation-name: moveup;
    animation-iteration-count: 1;
    animation-timing-function: ease-in-out;
}

@keyframes moveup {
    0% {
        bottom: -400px;
    }
    50% {
        bottom: 0px;
    }
    100% {
        bottom: 0px;
    }
}*/

header {
    animation-duration: 3s;
    animation-name: movedown;
    animation-iteration-count: 1;
    animation-timing-function: ease;
}
   
@keyframes movedown {
    0% {
        top: -200px;
    }
    50% {
        top: 0px;
    }
    100% {
        top: 0px;
    }
}













































/*Extra Test Code For Bounce on the buttons*/

/*.btn {
    animation-duration: 1.5s;
    animation-delay: 2s;
    animation-name: bounce;
    animation-iteration-count: 1;
    animation-timing-function: ease-in;
}
   
@keyframes bounce {
    0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
    40% {transform: translateY(-20px);}
    60% {transform: translateY(-10px);}
} */

